[tool.poetry]
name = "seismic-docker"
version = "0.0.1"
description = ""
authors = ["Reza Jelveh"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.6 || ^3.7"
scikit-fmm = "^2019.1"
scipy = "^1.2"
obspy = "^1.1"
pytz = "^2019.1"
scikit-learn = "^0.20.3"
matplotlib = "^3.0"
pymongo = "^3.7"
numpy = "^1.16"
msgpack = "^0.6.1"
h5py = "^2.9"
confluent-kafka = "^1.0"
pandas = "^0.24.2"
vaex = "^1.0"
keras = "^2.2"
scikit-image = "^0.15.0"
librosa = "^0.6.3"
tensorflow = "^1.13"

[tool.poetry.dev-dependencies]
